tests/tooling/fixtures/native/execution/positive/nested_while_break_continue_guarded.objc3
// Positive execution fixture: nested while control flow with guarded continue and deterministic break.
module NestedWhileBreakContinueGuarded;

fn main() -> i32 {
  while (1) {
    while (0) {
      continue;
    }
    break;
  }
  return 58;
}
