tests/tooling/fixtures/native/execution/negative/missing_entrypoint.objc3
// Negative execution fixture: links should fail because no `main` entrypoint exists.
module MissingEntrypoint;

fn helper() -> i32 {
  return 7;
}
